longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    external-dns.alpha.kubernetes.io/hostname: longhorn.rossreicks.com
    external-dns.alpha.kubernetes.io/target: rossreicks.duckdns.org
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.rossreicks.com
    secretName: wildcard-cert-prod-tls
  rules:
  - host: longhorn.rossreicks.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
